# open-chat-bots

./: .gitignore  Cargo.toml  GETSTARTED.md  OVERVIEW.md  README.md  dfx.json  mops.toml
rs/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  rust-toolchain.toml
rs/canister/: README.md
rs/canister/examples/echo/: Cargo.toml
rs/canister/examples/echo/src/: lib.rs  router.rs  state.rs
rs/canister/examples/echo/src/lifecycle/: post_upgrade.rs
rs/canister/examples/echo/src/router/: definition.rs
rs/canister/examples/echo/src/router/commands/: echo.rs
rs/canister/examples/greet/canister/: Cargo.toml  can.did
rs/canister/examples/greet/canister/src/: http_request.rs  lib.rs  router.rs  state.rs
rs/canister/examples/greet/canister/src/lifecycle/: init.rs  post_upgrade.rs
rs/canister/examples/greet/canister/src/router/: blobs.rs  commands.rs  definition.rs  metrics.rs  webhooks.rs
rs/canister/examples/greet/canister/src/router/commands/: echo.rs  greet.rs  (+3 more)
rs/canister/examples/greet/loader/: Cargo.toml
rs/canister/examples/greet/loader/src/: lib.rs
rs/canister/examples/hello/: Cargo.toml  can.did
rs/canister/examples/hello/src/: lib.rs
rs/canister/examples/hello/src/router/: commands.rs  definition.rs
rs/canister/examples/reminder/: Cargo.toml  can.did
rs/canister/examples/reminder/src/: lib.rs  reminders.rs  router.rs  state.rs
rs/canister/examples/reminder/src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
rs/canister/examples/reminder/src/model/: reminders.rs
rs/canister/examples/reminder/src/router/: commands.rs  definition.rs  metrics.rs
rs/canister/examples/reminder/src/router/commands/: delete.rs  list.rs  remind.rs  remind_at.rs  remind_recurring.rs  sync_api_key.rs
rs/canister/sdk/: Cargo.toml
rs/canister/sdk/src/: canister_runtime.rs  http_command_handler.rs  http_router.rs  lib.rs
rs/examples/dice/: .gitignore  Cargo.toml
rs/examples/dice/src/: commands.rs  main.rs
rs/examples/dice/src/commands/: coin.rs  roll.rs
rs/examples/discord/: Cargo.toml  README.md
rs/examples/discord/src/: config.rs  errors.rs  openchat.rs  state.rs
rs/examples/discord/src/openchat/: commands.rs  events.rs  types.rs
rs/examples/greet/canister/: Cargo.toml  can.did
rs/examples/greet/canister/src/: commands.rs  execute_command.rs  get_definition.rs  http_request.rs  lib.rs  metrics.rs  router.rs  state.rs
rs/examples/greet/canister/src/commands/: fractal.rs  greet.rs  joke.rs
rs/examples/greet/canister/src/router/: blobs.rs  commands.rs  definition.rs  metrics.rs
rs/examples/greet/canister/src/router/commands/: fractal.rs  greet.rs  joke.rs
rs/examples/greet/canister/src/router/webhooks/: create_channel.rs  delete_channel.rs  send_message.rs
rs/offchain/: README.md
rs/offchain/examples/dice/: Cargo.toml
rs/offchain/examples/dice/src/: config.rs  main.rs
rs/offchain/examples/dice/src/commands/: coin.rs  mod.rs  roll.rs
rs/offchain/examples/discord/: .gitignore  Cargo.toml  README.md  sample.config.toml
rs/offchain/examples/discord/src/: config.rs  discord.rs  main.rs  openchat.rs  shared.rs  state.rs
rs/offchain/examples/discord/src/discord/: commands.rs  events.rs  types.rs
rs/offchain/examples/discord/src/openchat/: commands.rs  events.rs  types.rs
rs/offchain/examples/llama/: .gitignore  Cargo.toml  sample.config.toml
rs/offchain/examples/llama/src/: config.rs  errors.rs  llm_canister_agent.rs  main.rs
rs/offchain/examples/llama/src/commands/: prompt.rs
rs/offchain/sdk/: Cargo.toml
rs/offchain/sdk/src/: agent_builder.rs  agent_runtime.rs  env.rs  lib.rs
rs/offchain/sdk/src/middleware/: tower.rs
rs/scripts/: deploy_dice_bot.sh  deploy_echo_bot.sh  deploy_greet_bot.sh  deploy_llama_bot.sh  deploy_mainnet_bot.sh  deploy_reminder_bot.sh  install_greet_bot.sh  install_reminder_bot.sh  notes.md  upgrade_greet_bot.sh  upgrade_reminder_bot.sh  upload_jokes.sh
rs/scripts/utils/: create_and_build_bot.sh  deploy_bot.sh  extract_oc_public_key.sh  get_bot_identity.sh
rs/sdk/: Cargo.toml  README.md
rs/sdk/src/: actions.rs  api_key.rs  api_key_registry.rs  command.rs  command_handler.rs  consts.rs  lib.rs  mainnet.rs  openchat_client.rs  openchat_client_factory.rs  runtime.rs
rs/sdk/src/api/: api_key_registry.rs  command.rs  command_handler.rs  create_channel.rs  definition.rs  delete_channel.rs  mod.rs  send_message.rs
rs/sdk/src/api/command/: command_handler.rs
rs/sdk/src/oc_api/: actions.rs  client.rs  client_factory.rs  get_access_token.rs  mod.rs
rs/sdk/src/oc_api/actions/: chat_details.rs  chat_events.rs  create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/oc_api/client/: chat_details.rs  chat_events.rs  create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/oc_api/client_factory/: api_key.rs  client.rs  command.rs
rs/sdk/src/oc_api/client_factory/api_key/: create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/oc_api/client_factory/client/: chat_details.rs  chat_events.rs  create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/oc_api/client_factory/command/: send_message.rs
rs/sdk/src/openchat_client/: api_key.rs  command.rs
rs/sdk/src/openchat_client/api_key/: send_message.rs
rs/sdk/src/openchat_client/command/: send_message.rs
rs/sdk/src/openchat_client_factory/: api_key.rs  command.rs
rs/sdk/src/openchat_client_factory/api_key/: create_channel.rs  delete_channel.rs  send_message.rs
rs/sdk/src/openchat_client_factory/command/: send_message.rs
rs/sdk/src/types/: access_gate_config.rs  action.rs  action_context.rs  api_key.rs  basic.rs  bot_command_context.rs  bot_context.rs  chat.rs  chat_permissions.rs  events.rs  group_permissions.rs  jwt.rs  message_content.rs  message_id.rs  mod.rs  permissions.rs
rs/sdk/src/utils/: base64.rs  image.rs  mod.rs  serializers.rs
rs/sdk_canister/: Cargo.toml
rs/sdk_canister/src/: async_handler.rs  canister_runtime.rs  http_command_handler.rs  http_router.rs  lib.rs  openchat_client.rs
rs/sdk_offchain/: Cargo.toml
rs/sdk_offchain/src/: agent.rs  agent_runtime.rs  lib.rs
(+79 files in other folders)
