[workspace]
members = [
    "canister/examples/echo",
    "canister/examples/greet/canister",
    "canister/examples/greet/loader",
    "canister/examples/reminder",
    "canister/sdk",
    "offchain/examples/dice",
    "offchain/examples/discord",
    "offchain/examples/llama",
    "offchain/sdk",
    "sdk",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
base64 = "0.22.1"
candid = "0.10.10"
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
clap = "4.5.4"
cron = { version = "0.15.0", features = ["serde"] }
ct-codecs = "1.1.1"
dataurl = "0.1.2"
dotenv = "0.15.0"
english-to-cron = "0.1.2" 
getrandom = { version = "0.2.15", features = ["custom"] }
http = "1.1.0"
ic-agent = "0.39.3"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-http-certification = "2.5.0"
ic-ledger-types = "0.14.0"
ic_principal = "0.1.1"
ic-stable-structures = "0.6.7"
icrc-ledger-types = "0.1.5"
image = { version = "0.25.5", default-features = false, features = ["png"] }
itertools = "0.13.0"
num-complex = "0.4.6"
p256 = { version = "0.13.2" }
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = "1.37.0"
toml = "0.8.20"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
truncrate = "0.1.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false

[patch.crates-io]
rmp-serde = { git = "https://github.com/hpeebles/msgpack-rust", rev = "832a3f48e67eea56c869715ae6e1045583dd011b" }
