[package]
name = "oc_bots_sdk_offchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-agent = { workspace = true }
oc_bots_sdk = { path = "../sdk" }
tokio = { workspace = true, features = ["rt"] }