[package]
name = "oc_bots_sdk_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-http-certification = { workspace = true }
oc_bots_sdk = { path = "../../sdk" }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
