[package]
name = "reminder_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
english-to-cron = { workspace = true }
getrandom = { version = "0.2.15", features = ["custom"] }
http = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-http-certification = { workspace = true }
ic_principal = { workspace = true }
ic-stable-structures = { workspace = true }
oc_bots_sdk = { path = "../../../sdk" }
oc_bots_sdk_canister = { path = "../../sdk" }
rmp-serde = { workspace = true }
serde = { workspace = true }
truncrate = { workspace = true }