[package]
name = "dice_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = [] }
oc_bots_sdk = { path = "../../../sdk" }
oc_bots_sdk_offchain = { path = "../../sdk", features = ["tower"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
